Fix popup spacing

--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -41,12 +41,17 @@
 
 .popup {
   background: white;
+
   border-radius: var(--border-radius-md);
+
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+
   max-width: 450px;
-  width: 90%;
+  width: 100%;
   overflow: hidden;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   justify-content: center;
   text-align: center;
   padding: 0;
@@ -106,7 +111,7 @@
 }
 
 .popup-content {
-  padding: 8px 24px 32px 24px;
+  align-self: center;
 }
 
 .popup-message {
@@ -135,7 +140,6 @@
 }
 
 .popup-btn-cancel {
-  background-color: #D9D9D9;
   box-shadow: 0 4px 0px #00000040;
   color: #333;
 }
@@ -145,12 +149,13 @@
 }
 
 .popup-btn-confirm {
-  background-color: #FC5E5E;
-  box-shadow: 0 4px 0px #E13A3A;
+  background-color: #fc5e5e;
+
+  box-shadow: 0 4px 0px #e13a3a;
   color: white;
   font-size: 0.9rem;
 }
 
 .popup-btn-confirm:hover {
-  background-color: #E13A3A;
+  background-color: #e13a3a;
 }
